ajustes no estilo

--- a/src/components/SecaoReceitas/styles.css
+++ b/src/components/SecaoReceitas/styles.css
@@ -2,13 +2,18 @@
     display: flex;
     flex-direction: column;
     margin: 50px 100px;
-    border: 1px solid black;
+    background-color: white;
+    border-radius: 5px;
+    font-family: var(--fontecorpo);
 }
 .tituloSecao {
     margin: 10px;
-    font-family: var(--fontecorpo);
+    padding-left: 50px;
+    font-size: 2em;
 }
 .receitas {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    align-content: flex-start;
 }
