--- a/src/pages/Sobre/style.css
+++ b/src/pages/Sobre/style.css
@@ -1,19 +1,9 @@
-.container {
-    margin: 50px auto;
-    background-color: white;
-    border-radius: 5px;
-    width: 75%;
-
-    font-family: var(--fontecorpo);
-    padding: 5px;
-}
-
-.container h2 {
+.container > h2 {
     margin: 15px 30px;
     font-size: 2em;
 }
 
-.container p {
+.container > p {
     margin: 10px 30px;
     font-size: 1em;
     text-indent: 30px;
