ajuste de estilo

--- a/src/pages/Sobre/style.css
+++ b/src/pages/Sobre/style.css
@@ -1,15 +1,15 @@
-.link-fotos {
+.link-sobre {
     color: var(--cor02);
     font-weight: 600;
 }
 
-.link-fotos:visited {
+.link-sobre:visited {
     color: var(--cor02);
 }
-.link-fotos:hover {
-    color: var(--cor01);
+.link-sobre:hover {
+    color: var(--cor03);
 }
-.link-fotos:active {
+.link-sobre:active {
     text-shadow: -1.5px -1.5px 2px #dddddd;
     color: #8c5b01;
 }
